Address PR review feedback
- Fix Java 8 source compatibility: replace Set.of() with
  Collections.unmodifiableSet and Optional.isEmpty() with
  !isPresent() (Copilot review)
- Handle WildcardType in List generics: resolve List<? extends Content>
  upper bounds for useResultSchema detection (Copilot review)
- Add hasAnnotationByFqcn check for List element classes: detect
  @McpContent-annotated POJOs in List<T> returns (Flanker32 review)
- Fix isSubclassOfRichType Javadoc: accurately states it only walks
  the superclass chain (Copilot review)
- Add unit tests for setUseResultSchemaIfNeeded: covers String return,
  void return, output bindings present, no tool trigger, and empty
  bindings scenarios
- Add unit tests for prompt annotation processing: covers trigger +
  arguments, trigger only, and arguments only scenarios